# django-prac-004

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  README.md  appsepc.yml  appspec.yml  deploy.sh  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.dev.txt  requirements.product.txt  requirements.txt
.circleci/: config.yml
django_project/: manage.py
django_project/account/: admin.py  models.py
django_project/account/migrations/: 0001_initial.py
django_project/accounts/: forms.py  routers.py  urls.py  views.py
django_project/accounts/migrations/: 0001_initial.py
django_project/forum/: admin.py  forms.py  models.py  urls.py  views.py
django_project/forum/migrations/: 0001_initial.py  0002_auto_20210328_1917.py  0003_auto_20210329_0949.py  0004_auto_20210404_2044.py  0005_post_renew.py  0006_auto_20210410_1018.py  0007_auto_20210411_2042.py
django_project/forum/templatetags/: forum_extras.py
django_project/mysite/: asgi.py  routers.py  routers_old.py  tests.py  urls.py  wsgi.py
dockerfiles/: Dockerfile  Dockerfile.circleci  Dockerfile.dev  Dockerfile.django.dev  Dockerfile.postgres.dev  docker-compose.blue.yml  docker-compose.green.yml
gunicorn/: gunicorn.service
jstoolchain/: package-lock.json  package.json  tailwind.config.js
nginx/ALB_with_CD/: noname2048.dev.conf
nginx/using_ALB/: noname2048.dev.conf
nginx/using_EC2_only/: noname2048.dev.conf
shfiles/: application-start.sh  validate-service.sh
water/: manage.py
water/forum/: models.py
water/main/: urls.py
water/water/: tests.py  urls.py  wsgi.py
(+27 files in other folders)
